Add --incompatible_java_info_merge_runtime_module_flags