@@ -850,6 +850,7 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
 
   @Test
   public void buildHelperCreateJavaInfoWithModuleFlags() throws Exception {
+    setBuildLanguageOptions("--noincompatible_java_info_merge_runtime_module_flags");
     ruleBuilder().build();
     scratch.file(
         "foo/BUILD",
@@ -902,6 +903,63 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
               // look at runtime_deps for module flags.
               "--add-opens=java.base/java.lang=ALL-UNNAMED",
               "--add-opens=java.base/java.math=ALL-UNNAMED")
+          .inOrder();
+    }
+  }
+
+  @Test
+  public void buildHelperCreateJavaInfoWithModuleFlagsIncompatibleMergeRuntime() throws Exception {
+    setBuildLanguageOptions("--incompatible_java_info_merge_runtime_module_flags");
+    ruleBuilder().build();
+    scratch.file(
+        "foo/BUILD",
+        "load(':extension.bzl', 'my_rule')",
+        "java_library(",
+        "    name = 'my_java_lib_direct',",
+        "    srcs = ['java/A.java'],",
+        "    add_exports = ['java.base/java.lang'],",
+        "    add_opens = ['java.base/java.lang'],",
+        ")",
+        "java_library(",
+        "    name = 'my_java_lib_runtime',",
+        "    srcs = ['java/A.java'],",
+        "    add_opens = ['java.base/java.util'],",
+        ")",
+        "java_library(",
+        "    name = 'my_java_lib_exports',",
+        "    srcs = ['java/A.java'],",
+        "    add_opens = ['java.base/java.math'],",
+        ")",
+        "my_rule(",
+        "    name = 'my_starlark_rule',",
+        "    dep = [':my_java_lib_direct'],",
+        "    dep_runtime = [':my_java_lib_runtime'],",
+        "    dep_exports = [':my_java_lib_exports'],",
+        "    output_jar = 'my_starlark_rule_lib.jar',",
+        "    add_exports = ['java.base/java.lang.invoke'],",
+        ")");
+    assertNoEvents();
+
+    JavaModuleFlagsProvider ruleOutputs =
+        fetchJavaInfo().getProvider(JavaModuleFlagsProvider.class);
+
+    if (analysisMock.isThisBazel()) {
+      assertThat(ruleOutputs.toFlags())
+          .containsExactly(
+              "--add-exports=java.base/java.lang=ALL-UNNAMED",
+              "--add-exports=java.base/java.lang.invoke=ALL-UNNAMED",
+              "--add-opens=java.base/java.util=ALL-UNNAMED",
+              "--add-opens=java.base/java.math=ALL-UNNAMED",
+              "--add-opens=java.base/java.lang=ALL-UNNAMED")
+          .inOrder();
+    } else {
+      // add_exports/add_opens ignored in JavaInfo constructor in #newJavaInfo below
+      assertThat(ruleOutputs.toFlags())
+          .containsExactly(
+              "--add-exports=java.base/java.lang=ALL-UNNAMED",
+              "--add-opens=java.base/java.util=ALL-UNNAMED",
+              "--add-opens=java.base/java.math=ALL-UNNAMED",
+              "--add-opens=java.base/java.lang=ALL-UNNAMED")
           .inOrder();
     }
   }
